# Spark-Audio

./: .gitignore  CMakeLists.txt  CMakePresets.json  EULA.txt  README.md  SPARK SDK Documentation.html  pyocd.yml
app/: CMakeLists.txt
app/example/: CMakeLists.txt
app/example/audio_bidirectional/: CMakeLists.txt  audio_bidirectional_coord.c  audio_bidirectional_node.c
app/example/audio_bidirectional/config/: CMakeLists.txt  pairing_cfg.h  sac_cfg.h
app/example/audio_bidirectional/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node.h
app/example/audio_bidirectional/facade/: audio_bidirectional_facade.h
app/example/audio_unidirectional/: CMakeLists.txt  audio_unidirectional_coord.c  audio_unidirectional_node.c
app/example/audio_unidirectional/config/: CMakeLists.txt  pairing_cfg.h  sac_cfg.h
app/example/audio_unidirectional/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node.h
app/example/audio_unidirectional/facade/: audio_unidirectional_facade.h
app/example/connection_priority/: CMakeLists.txt  connection_priority_coord.c  connection_priority_node.c
app/example/connection_priority/config/: CMakeLists.txt  pairing_cfg.h
app/example/connection_priority/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node.h
app/example/connection_priority/facade/: connection_priority_facade.h
app/example/datalink/: CMakeLists.txt  datalink_coord.c  datalink_node.c
app/example/datalink/config/: CMakeLists.txt  pairing_cfg.h
app/example/datalink/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node.h
app/example/datalink/facade/: datalink_facade.h
app/example/fragmentation/: CMakeLists.txt  frag_coord.c  frag_node.c
app/example/fragmentation/config/: CMakeLists.txt  pairing_cfg.h
app/example/fragmentation/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node.h
app/example/fragmentation/facade/: frag_facade.h
app/example/hello_world/: CMakeLists.txt  hello_world_coord.c  hello_world_node.c
app/example/hello_world/config/: CMakeLists.txt
app/example/hello_world/facade/: hello_world_facade.h
app/example/hello_world_rtos/: CMakeLists.txt  hello_world_rtos_coord.c  hello_world_rtos_node.c
app/example/hello_world_rtos/config/: CMakeLists.txt  pairing_cfg.h
app/example/hello_world_rtos/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node.h
app/example/hello_world_rtos/facade/: hello_world_rtos_facade.h
app/example/star_network/: CMakeLists.txt  star_network_coord.c  star_network_node.c
app/example/star_network/config/: CMakeLists.txt  pairing_cfg.h
app/example/star_network/config/sr1000/: swc_cfg.h  swc_cfg_coord.h  swc_cfg_node1.h
app/example/star_network/facade/: star_network_facade.h
app/tool/: CMakeLists.txt
app/tool/profiler/: CMakeLists.txt  profiler_dut.c  profiler_helper.c
app/tool/profiler/config/: CMakeLists.txt  pairing_cfg.h
app/tool/profiler/config/sr1000/: swc_cfg.h
app/tool/profiler/facade/: profiler_facade.h
backend/: CMakeLists.txt
backend/evk1_4_backend/: CMakeLists.txt
backend/evk1_4_backend/audio_bidirectional_backend/: audio_bidirectional_backend.c
backend/evk1_4_backend/audio_core_backend/: audio_core_backend.c
backend/evk1_4_backend/audio_unidirectional_backend/: audio_unidirectional_backend.c
backend/evk1_4_backend/bsp_validator_backend/: bsp_validator_backend.c
backend/evk1_4_backend/connection_priority_backend/: connection_priority_backend.c
backend/evk1_4_backend/datalink_backend/: datalink_backend.c
backend/quasar_backend/: CMakeLists.txt
bsp/: CMakeLists.txt
bsp/evk1_4/: CMakeLists.txt  evk.c  evk.h  evk_audio.c  evk_audio.h  evk_button.c  evk_button.h  evk_clock.c  evk_clock.h  evk_dac.h  evk_dbg.c  evk_dbg.h  evk_debug.c  evk_debug.h  evk_def.h  evk_flash.c  evk_flash.h  evk_it.c  evk_it.h  evk_led.c  evk_led.h  evk_mpu.c  evk_power.c  evk_power.h  evk_profiler.c  evk_profiler.h  evk_radio.c  evk_radio.h  evk_timer.c  evk_timer.h  evk_timer_ext.c  evk_timer_ext.h  evk_uart.c  evk_uart.h  evk_usb.c  evk_usb.h  stm32g4xx_hal_conf.h  syscalls.c  system_stm32g4xx.c
bsp/quasar/: CMakeLists.txt  quasar.c  quasar.h  quasar_adc.c  quasar_adc.h  quasar_audio.c  quasar_audio.h  quasar_button.c  quasar_clock.c  quasar_debug.c  quasar_debug.h  quasar_def.h  quasar_dma.c  quasar_dma.h  quasar_fifo.c  quasar_fifo.h  quasar_gpio.c  quasar_gpio.h  quasar_i2c.c  quasar_i2c.h  quasar_it.c  quasar_it.h  quasar_led.c  quasar_memory.c  quasar_memory.h  quasar_power.c  quasar_profiler.c  quasar_profiler.h  quasar_pwm.c  quasar_pwm.h  quasar_radio.c  quasar_radio.h  quasar_rgb.c  quasar_spi.c  quasar_spi.h  quasar_timer.c  quasar_timer.h  quasar_timer_ext.c  quasar_timer_ext.h  quasar_usb.c  (+2 more)
core/audio/: CMakeLists.txt  sac_api.h  sac_error.h  sac_hal_facade.h  sac_stats.h  sac_utils.h
core/wireless/: CMakeLists.txt  swc_api.h  swc_error.h  swc_hal_facade.h  swc_stats.h
driver/max98091/: max98091.c  max98091.h  max98091_reg.h
middleware/: CMakeLists.txt
middleware/tinyusb/: CMakeLists.txt  tinyusb_facade.h
middleware/tinyusb/backend/: CMakeLists.txt
middleware/tinyusb/backend/evk/: CMakeLists.txt  backend.c
middleware/tinyusb/backend/quasar/: CMakeLists.txt  backend.c
middleware/tinyusb/src/: README.md
middleware/tinyusb/tinyusb_app_config/: CMakeLists.txt
middleware/tinyusb/tinyusb_app_config/single_cdc/: CMakeLists.txt  tusb_config.h  tusb_descriptors.c
module/: CMakeLists.txt
module/tinyusb/: CMakeLists.txt
module/tinyusb/tinyusb_baremetal/: CMakeLists.txt  tinyusb_baremetal.c  tinyusb_baremetal.h  tinyusb_baremetal_facade.h
module/tinyusb/tinyusb_baremetal/backend/: CMakeLists.txt  evk_backend.c  quasar_backend.c
module/tinyusb/tinyusb_freertos/: CMakeLists.txt  tinyusb_freertos.c  tinyusb_freertos.h  tinyusb_freertos_facade.h
module/tinyusb/tinyusb_freertos/backend/: CMakeLists.txt  evk_backend.c  quasar_backend.c
script/: activate.bat  bootstrap.bat  bootstrap.sh  dfu-util.py  install_stm32_bootloader_driver.bat  show_clang.sh
toolchain/: gcc-arm-compiler.cmake  gcc-arm-flags-stm32g4.cmake  gcc-arm-flags-stm32u5.cmake  gcc-x86-compiler.cmake
(+156 files in other folders)
